Rename the task file

--- a/task.ipynb
+++ b/task.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "# Генерация данных\n",
     "data = generate_realistic_temperature_data(list(seasonal_temperatures.keys()))\n",
-    "data.to_csv('temperature_data.csv', index=False)"
+    "data.to_csv('data/temperature_data.csv', index=False)"
    ],
    "metadata": {
     "id": "SsrwTMhRj6dK",
