Restructure the project

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -572,7 +572,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from config import API_KEY\n",
+    "from src.config import API_KEY\n",
     "\n",
     "API_URL = 'https://api.openweathermap.org/data/2.5/weather'"
    ],
